# dl-overcooked

./: .gitignore  AGENTS.md  CURRENT_STATUS_OPTION_A.md  README.md  pyproject.toml
artifacts/: final_policy_config.json
configs/: collect_demonstrations.yaml  competition.yaml  evaluate_adaptive_competition.yaml  evaluate_best_current.yaml  evaluate_option_b.yaml  evaluate_scenario_4.yaml  evaluate_score_first_portfolio.yaml  (+13 more)
legacy/option_A_frozen_hybrid_score/: CURRENT_STATUS_OPTION_A.md  README.md  SHA256SUMS.txt  pyproject.toml
legacy/option_A_frozen_hybrid_score/artifacts/final/: a1_policy.npz  final_policy_config.json
legacy/option_A_frozen_hybrid_score/code_overlay/policies/: basic_policies.py  template.py
legacy/option_A_frozen_hybrid_score/code_overlay/scripts/: summarize_official_matrix.py
legacy/option_A_frozen_hybrid_score/code_overlay/src/: policy_loader.py
legacy/option_A_frozen_hybrid_score/configs/: evaluate_builtin_greedy.yaml  evaluate_final.yaml  evaluate_greedy_human_model.yaml  evaluate_hybrid_official.yaml  evaluate_hybrid_official_no_swap.yaml  evaluate_option_a.yaml  evaluate_option_a2_router.yaml
legacy/option_A_frozen_hybrid_score/reports/: SCENARIO_4_RANDOM_MOTION_REPORT.md  phase_hybrid_a1_baseline.csv  phase_hybrid_a2_router_baseline.csv  phase_hybrid_builtin_greedy.csv  phase_hybrid_greedy_human_model.csv  phase_hybrid_official_3seed.csv  phase_hybrid_official_3seed_attempts.csv  phase_hybrid_official_3seed_no_swap.csv  phase_hybrid_official_3seed_scenarios.csv  phase_hybrid_official_matrix.csv  score_calculation_examples.md
(+1937 files in other folders)
